applications/prd/wefood-onboarding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wefood-onboarding-prd
  labels:
    app: wefood-onboarding
    environment: production
