applications/prd/wefood-onboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wefood-onboarding
  namespace: wefood-onboarding-prd
  labels:
    app: wefood-onboarding
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: wefood-onboarding
