applications/prd/wefood-onboarding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wefood-onboarding
  namespace: wefood-onboarding-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - onboarding.trywefood.dev
    secretName: wefood-onboarding-tls

  rules:
  - host: onboarding.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wefood-onboarding
            port:
              number: 80
